samples/_failures_safe/1761376957_39d2bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e1aa998.c: In function ‘main’:
./samples/SAFE/__tmp_5e1aa998.c:146: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5e1aa998.c:145:5: error: expected declaration or statement at end of input
  145 |     if
      |     ^~
